--- a/_src/index.html
+++ b/_src/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Everypay</title>
+  <title>Мир мебели</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="Everypay информирование о поступающих оплатах">
-  <meta property="og:type" content="Everypay информирование о поступающих оплатах">
-  <meta property="og:title" content="Everypay информирование о поступающих оплатах">
-  <meta property="og:description" content="Everypay информирование о поступающих оплатах">
-  <meta property="og:image" content="Everypay информирование о поступающих оплатах">
-  <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
+  <meta name="description" content="Мир мебели">
+  <meta property="og:type" content="Мир мебели">
+  <meta property="og:title" content="Мир мебели">
+  <meta property="og:description" content="Мир мебели">
+  <meta property="og:image" content="Мир мебели">
+  <link rel="apple-touch-icon" sizes="144x144" href="/fav/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
   <link rel="manifest" href="/fav/site.webmanifest">
@@ -26,26 +26,85 @@
 <body class="page-body">
   <header class="header" id="header">
     <div class="header__inner container">
-      <a class="header__logo logo" href="/index.html"></a>
-      <nav class="header__nav nav-top" id="header-nav">
-        <ul class="nav-top__list"></ul>
-      </nav><a class="header__link header__link--open" href="#header__nav"><span class="header__link-text">Открыть меню</span></a><a class="header__link header__link--close hidden-link" href="#header__nav"><span class="header__link-text">Закрыть меню</span></a>
+      <a class="header__logo logo" href="/index.html">
+        <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
+      </a>
+      <nav class="header__nav nav" id="header-nav">
+        <ul class="nav-top__list slimmenu">
+          <li class="nav__item"><a class="nav__link" href="">консультация дизайнера интерьера</a>
+          </li>
+          <li class="nav__item"><a class="nav__link" href="">декорирование интерьера</a>
+          </li>
+          <li class="nav__item"><a class="nav__link nav__link--catalog" href="#">Каталог мебели</a>
+            <ul class="nav__list-sub sub-list">
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ГОСТИНЫЕ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">СПАЛЬНИ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ДИВАНЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ДЕТСКИЕ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">КУХНИ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">СТОЛЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ОБЕДЕННЫЕ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">СТОЛЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">СТУЛЬЯ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">МАТРАСЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">КРОВАТИ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ПРИХОЖИЕ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">БИБЛИОТЕКИ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ШКАФЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ШКАФЫ-КУПЕ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">КОМОДЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ТУМБЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">КРЕСЛА</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ЗЕРКАЛА</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ПОЛКИ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">КАРТИНЫ</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">РАСПРОДАЖА</a>
+              </li>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">АКЦИИ</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav__item nav__item--tel"><a class="nav__link nav__link--tel" href="tel:+73952503504">+7 (3952) 503-504</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main class="page-main">
-    <h1 class="page-main__title">Информирование о поступающих оплатах</h1>
+    <h1 class="page-main__title"></h1>
     <section class="promo">
       <div class="promo__inner container">
-        <h2 class="promo__title">Наши приемущества</h2>
+        <h2 class="promo__title"></h2>
       </div>
     </section>
   </main>
   <footer class="main-footer">
     <div class="main-footer__inner container">
-      <p class="main-footer__copy">© 2020, Everypay</p><a class="main-footer__politic hover-opacity" href="/politic.html">Политика конфиденциальности</a>
+      <p class="main-footer__copy">© 2020</p><a class="main-footer__politic hover-opacity" href="/politic.html">Политика конфиденциальности</a>
     </div>
   </footer>
-  <script src="/js/script.js" type="module"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
