--- a/_src/index.html
+++ b/_src/index.html
@@ -25,7 +25,7 @@
 
 <body class="page-body">
   <header class="header" id="header">
-    <div class="header__inner container">
+    <div class="header__inner container container--header">
       <a class="header__logo logo" href="/index.html">
         <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
       </a>
