--- a/_src/index.html
+++ b/_src/index.html
@@ -30,13 +30,18 @@
         <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
       </a>
       <nav class="header__nav nav" id="header-nav">
-        <ul class="nav-top__list slimmenu">
+        <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="">консультация дизайнера интерьера</a>
           </li>
           <li class="nav__item"><a class="nav__link" href="">декорирование интерьера</a>
           </li>
-          <li class="nav__item"><a class="nav__link nav__link--catalog" href="#">Каталог мебели</a>
-            <ul class="nav__list-sub sub-list">
+          <li class="nav__item nav__item--down" data-accordion>
+            <a class="nav__link nav__link--down nav__link--catalog" href="#" data-control>
+              <svg class="nav__link-hamburger__icon" viewBox="0 0 14 12" width="14" height="12">
+                <use xlink:href="/img/sprite.svg#hamburger"></use>
+              </svg><span> Каталог мебели</span>
+            </a>
+            <ul class="nav__list-sub sub-list" data-content>
               <li class="sub-list__item"><a class="sub-list__link" href="#">ГОСТИНЫЕ</a>
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="#">СПАЛЬНИ</a>
@@ -49,9 +54,7 @@
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="#">СТОЛЫ</a>
               </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="#">ОБЕДЕННЫЕ</a>
-              </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="#">СТОЛЫ</a>
+              <li class="sub-list__item"><a class="sub-list__link" href="#">ОБЕДЕННЫЕ СТОЛЫ</a>
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="#">СТУЛЬЯ</a>
               </li>
