--- a/_src/index.html
+++ b/_src/index.html
@@ -28,12 +28,16 @@
     <div class="header__inner container container--header"><a class="header__link-tel" href="tel:+73952503504">+7 (3952) 503-504</a>
       <div class="header__logo-wrap">
         <a class="header__logo logo" href="/index.html">
-          <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
+          <picture>
+            <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
+          </picture>
         </a>
       </div>
       <nav class="header__nav nav" id="header-nav">
         <a class="nav__logo" href="/index.html">
-          <img class="nav__logo-img" src="/img/nav-logo.png" srcset="/img/nav-logo.png 1x, /img/nav-logo@2x.png 2x" alt="логотип" width="141" height="21" loading="lazy" />
+          <picture>
+            <img class="nav__logo-img" src="/img/nav-logo.png" srcset="/img/nav-logo.png 1x, /img/nav-logo@2x.png 2x" alt="логотип" width="141" height="21" loading="lazy" />
+          </picture>
         </a>
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="#">консультация дизайнера&nbsp;интерьера</a>
@@ -97,7 +101,7 @@
           </li>
           <li class="nav__item nav__item--tel"><a class="nav__link nav__link--tel" href="tel:+73952503504">+7 (3952) 503-504</a>
           </li>
-        </ul><a class="header__link header__link--close hidden-link" href="#header-nav"><span class="header__link-text">Закрыть меню</span>
+        </ul><a class="header__link header__link--close" href="#header-nav"><span class="header__link-text">Закрыть меню</span>
             <svg class="header__link-close__icon" viewBox="0 0 23 23" width="23" height="23">
               <use xlink:href="/img/sprite.svg#menu-close"></use>
             </svg></a>
@@ -113,10 +117,25 @@
     </div>
   </header>
   <main class="page-main">
-    <h1 class="page-main__title"></h1>
     <section class="promo">
+      <div class="promo__img-wrap">
+        <picture>
+          <source media="(max-width: 768px)" srcset="/img/promo-bg-768.jpg 1x, /img/promo-bg-768@2x.jpg 2x" />
+          <source media="(max-width: 1200px)" srcset="/img/promo-bg-1200.jpg 1x, /img/promo-bg-1200@2x.jpg 2x" />
+          <source media="(max-width: 1440px)" srcset="/img/promo-bg-1440.jpg 1x, /img/promo-bg-1440@2x.jpg 2x" />
+          <img class="promo__img" src="/img/promo-bg.jpg" srcset="/img/promo-bg.jpg 1x, /img/promo-bg@2x.jpg 2x" alt="" width="1920" height="965" loading="lazy" />
+        </picture>
+      </div>
       <div class="promo__inner container">
-        <h2 class="promo__title"></h2>
+        <h2 class="promo__title">Поможем создать пространство для комфорта вашей жизни</h2>
+        <div class="promo__slogan promo-slogan">
+          <p class="promo-slogan__text">Стоимость консультации вернется в ваш дом мебелью</p>
+          <a class="promo-slogan__link record-link" href="#">
+            <svg class="record-link__icon" viewBox="0 0 90 49" width="90" height="49">
+              <use xlink:href="/img/sprite.svg#record"></use>
+            </svg><span class="record-link__text">Записаться</span>
+          </a>
+        </div>
       </div>
     </section>
   </main>
