--- a/_src/index.html
+++ b/_src/index.html
@@ -127,14 +127,58 @@
       <div class="promo__inner">
         <h2 class="promo__title">Поможем<br>создать пространство<br>для&nbsp;комфорта вашей жизни</h2>
         <div class="promo__slogan promo-slogan">
-          <p class="promo-slogan__text">Стоимость консультации вернется в ваш дом мебелью</p>
+          <p class="promo-slogan__text">Стоимость консультации вернется в&nbsp;ваш&nbsp;дом мебелью</p>
         </div><a class="promo-slogan__link record-link open-modal-consultation" href="#"><span class="record-link__icon"></span><span class="record-link__text">Записаться</span></a>
       </div>
     </section>
     <section class="benefit line-block">
       <div class="benefit__inner container container--border">
-        <h2 class="benefit__title title">Мы&nbsp;будем полезны,&nbsp;если:</h2>
-        <ul class="benefit__list"></ul>
+        <figure class="benefit__img"></figure>
+        <h2 class="benefit__title title">Мы будем полезны, если:</h2>
+        <ul class="benefit__list">
+          <li class="benefit__item benefit-item">
+            <figure class="benefit-item__img benefit-item__img--1"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">покупаете квартиру</h3>
+              <p class="benefit-item__text">Раздумываете над планировкой, палитрой или общей концепцией</p>
+            </div>
+          </li>
+          <li class="benefit__item benefit-item benefit__item--even">
+            <figure class="benefit-item__img benefit-item__img--2"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">Делаете ремонт</h3>
+              <p class="benefit-item__text">Планируете ремонт сами, но не уверены, учли ли все достоинства и недостатки комнаты</p>
+            </div>
+          </li>
+          <li class="benefit__item benefit-item">
+            <figure class="benefit-item__img benefit-item__img--3"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">Хотите преобразить интерьер</h3>
+              <p class="benefit-item__text">Думаете изменить атмосферу в уже годами вывереном интерьере без ремонта</p>
+            </div>
+          </li>
+          <li class="benefit__item benefit-item benefit__item--even">
+            <figure class="benefit-item__img benefit-item__img--4"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">Выбираете мебель</h3>
+              <p class="benefit-item__text">Нет сил и времени ходить по магазинам в поисках идеала</p>
+            </div>
+          </li>
+          <li class="benefit__item benefit-item">
+            <figure class="benefit-item__img benefit-item__img--5"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">раздумываете над декором</h3>
+              <p class="benefit-item__text">Сомневаетесь, какой выбрать ковер в спальню и подойдет ли к нему картина</p>
+            </div>
+          </li>
+          <li class="benefit__item benefit-item benefit__item--even">
+            <figure class="benefit-item__img benefit-item__img--6"></figure>
+            <div class="benefit-item__box">
+              <h3 class="benefit-item__title">Мечтаете об&nbsp;инстаграмном<br>доме</h3>
+              <p class="benefit-item__text">И хотите сэкономить на дизайн-проекте</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
