--- a/_src/index.html
+++ b/_src/index.html
@@ -136,42 +136,42 @@
         <figure class="benefit__img"></figure>
         <h2 class="benefit__title title">Мы будем полезны, если:</h2>
         <ul class="benefit__list">
-          <li class="benefit__item benefit-item">
+          <li class="benefit__item benefit-item benefit__item--1">
             <figure class="benefit-item__img benefit-item__img--1"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">покупаете квартиру</h3>
               <p class="benefit-item__text">Раздумываете над планировкой, палитрой или общей концепцией</p>
             </div>
           </li>
-          <li class="benefit__item benefit-item benefit__item--even">
+          <li class="benefit__item benefit-item benefit__item--even benefit__item--2">
             <figure class="benefit-item__img benefit-item__img--2"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">Делаете ремонт</h3>
               <p class="benefit-item__text">Планируете ремонт сами, но не уверены, учли ли все достоинства и недостатки комнаты</p>
             </div>
           </li>
-          <li class="benefit__item benefit-item">
+          <li class="benefit__item benefit-item benefit__item--3">
             <figure class="benefit-item__img benefit-item__img--3"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">Хотите преобразить интерьер</h3>
               <p class="benefit-item__text">Думаете изменить атмосферу в уже годами вывереном интерьере без ремонта</p>
             </div>
           </li>
-          <li class="benefit__item benefit-item benefit__item--even">
+          <li class="benefit__item benefit-item benefit__item--even benefit__item--4">
             <figure class="benefit-item__img benefit-item__img--4"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">Выбираете мебель</h3>
               <p class="benefit-item__text">Нет сил и времени ходить по магазинам в поисках идеала</p>
             </div>
           </li>
-          <li class="benefit__item benefit-item">
+          <li class="benefit__item benefit-item benefit__item--5">
             <figure class="benefit-item__img benefit-item__img--5"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">раздумываете над декором</h3>
               <p class="benefit-item__text">Сомневаетесь, какой выбрать ковер в спальню и подойдет ли к нему картина</p>
             </div>
           </li>
-          <li class="benefit__item benefit-item benefit__item--even">
+          <li class="benefit__item benefit-item benefit__item--even benefit__item--6">
             <figure class="benefit-item__img benefit-item__img--6"></figure>
             <div class="benefit-item__box">
               <h3 class="benefit-item__title">Мечтаете об&nbsp;инстаграмном<br>доме</h3>
@@ -207,11 +207,6 @@
       </div>
     </section>
   </main>
-  <footer class="main-footer">
-    <div class="main-footer__inner container">
-      <p class="main-footer__copy">© 2020</p><a class="main-footer__politic hover-opacity" href="/politic.html">Политика конфиденциальности</a>
-    </div>
-  </footer>
   <script src="/js/script.js"></script>
 </body>
 
