--- a/_src/index.html
+++ b/_src/index.html
@@ -28,12 +28,12 @@
     <div class="header__inner container container--header"><a class="header__link-tel" href="tel:+73952503504">+7 (3952) 503-504</a>
       <div class="header__logo-wrap">
         <a class="header__logo logo" href="/index.html">
-          <img class="logo__img" src="/img/logo.png" srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
+          <img class="lazyload logo__img" data-src="/img/logo.png" data-srcset="/img/logo.png 1x, /img/logo@2x.png 2x" alt="логотип" width="238" height="36" loading="lazy" />
         </a>
       </div>
       <nav class="header__nav nav" id="header-nav">
         <a class="nav__logo" href="/index.html">
-          <img class="nav__logo-img" src="/img/nav-logo.png" srcset="/img/nav-logo.png 1x, /img/nav-logo@2x.png 2x" alt="логотип" width="141" height="21" loading="lazy" />
+          <img class="lazyload nav__logo-img" data-src="/img/nav-logo.png" data-srcset="/img/nav-logo.png 1x, /img/nav-logo@2x.png 2x" alt="логотип" width="141" height="21" loading="lazy" />
         </a>
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="#">консультация дизайнера&nbsp;интерьера</a>
@@ -116,12 +116,12 @@
     <section class="promo">
       <div class="promo__img-wrap">
         <picture>
-          <source media="(max-width: 360px)" srcset="/img/promo-bg-360.jpg 1x, /img/promo-bg-360@2x.jpg 2x" />
-          <source media="(max-width: 412px)" srcset="/img/promo-bg-412.jpg 1x, /img/promo-bg-412@2x.jpg 2x" />
-          <source media="(max-width: 768px)" srcset="/img/promo-bg-768.jpg 1x, /img/promo-bg-768@2x.jpg 2x" />
-          <source media="(max-width: 1200px)" srcset="/img/promo-bg-1200.jpg 1x, /img/promo-bg-1200@2x.jpg 2x" />
-          <source media="(max-width: 1440px)" srcset="/img/promo-bg-1440.jpg 1x, /img/promo-bg-1440@2x.jpg 2x" />
-          <img class="promo__img" src="/img/promo-bg.jpg" srcset="/img/promo-bg.jpg 1x, /img/promo-bg@2x.jpg 2x" alt="" width="1920" height="965" loading="lazy" />
+          <source media="(max-width: 360px)" data-srcset="/img/promo-bg-360.jpg 1x, /img/promo-bg-360@2x.jpg 2x" />
+          <source media="(max-width: 412px)" data-srcset="/img/promo-bg-412.jpg 1x, /img/promo-bg-412@2x.jpg 2x" />
+          <source media="(max-width: 768px)" data-srcset="/img/promo-bg-768.jpg 1x, /img/promo-bg-768@2x.jpg 2x" />
+          <source media="(max-width: 1200px)" data-srcset="/img/promo-bg-1200.jpg 1x, /img/promo-bg-1200@2x.jpg 2x" />
+          <source media="(max-width: 1440px)" data-srcset="/img/promo-bg-1440.jpg 1x, /img/promo-bg-1440@2x.jpg 2x" />
+          <img class="lazyload promo__img" data-src="/img/promo-bg.jpg" data-srcset="/img/promo-bg.jpg 1x, /img/promo-bg@2x.jpg 2x" alt="" width="1920" height="965" loading="lazy" />
         </picture>
       </div>
       <div class="promo__inner">
@@ -179,6 +179,131 @@
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="consultation">
+      <div class="consultation__inner">
+        <div class="consultation__top cons-top line-block">
+          <div class="cons-top__img-wrap">
+            <picture>
+              <source media="(max-width: 360px)" data-srcset="/img/cons-bg-360.jpg 1x, /img/cons-bg-360@2x.jpg 2x" />
+              <source media="(max-width: 412px)" data-srcset="/img/cons-bg-412.jpg 1x, /img/cons-bg-412@2x.jpg 2x" />
+              <source media="(max-width: 768px)" data-srcset="/img/cons-bg-768.jpg 1x, /img/cons-bg-768@2x.jpg 2x" />
+              <source media="(max-width: 1200px)" data-srcset="/img/cons-bg-1200.jpg 1x, /img/cons-bg-1200@2x.jpg 2x" />
+              <source media="(max-width: 1440px)" data-srcset="/img/cons-bg-1440.jpg 1x, /img/cons-bg-1440@2x.jpg 2x" />
+              <img class="lazyload cons-top__img" data-src="/img/cons-bg.jpg" data-srcset="/img/cons-bg.jpg 1x, /img/cons-bg@2x.jpg 2x" alt="" width="1920" height="969" loading="lazy" />
+            </picture>
+          </div>
+          <div class="cons-top__inner container container--border">
+            <div class="consultation__title-block t-block">
+              <div class="t-block__top"><span class="t-block__num">01</span><span class="t-block__text t-block__text--top"> Консультация</span>
+              </div>
+              <p class="t-block__text t-block__text--bottom">дизайнера интерьера</p>
+            </div>
+            <div class="cons-top__wrapper">
+              <div class="cons-top__left">
+                <ul class="cons-top__list">
+                  <li class="cons-top__item cons-top-item">
+                    <figure class="cons-top-item__img cons-top-item__img--1"></figure>
+                    <p class="cons-top-item__text">2 грамотных планировочных решения с зонированием и расстановкой мебели</p>
+                  </li>
+                  <li class="cons-top__item cons-top-item">
+                    <figure class="cons-top-item__img cons-top-item__img--2"></figure>
+                    <p class="cons-top-item__text">Стилевой и цветовой коллаж с индивидуальными вариантами решений под ваш запрос</p>
+                  </li>
+                  <li class="cons-top__item cons-top-item">
+                    <figure class="cons-top-item__img cons-top-item__img--3"></figure>
+                    <p class="cons-top-item__text">Советы по материалам, размещению коммуникаций, организации освещения</p>
+                  </li>
+                  <li class="cons-top__item cons-top-item">
+                    <figure class="cons-top-item__img cons-top-item__img--4"></figure>
+                    <p class="cons-top-item__text">Идеи, которые позволят взглянуть на дом по-новому</p>
+                  </li>
+                  <li class="cons-top__item cons-top-item">
+                    <figure class="cons-top-item__img cons-top-item__img--5"></figure>
+                    <p class="cons-top-item__text">Подбор мебели под бюджет</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="cons-top__right">
+                <div class="cons-top__plus plus">
+                  <div class="plus__top">
+                    <p class="plus__price">стоимость консультации</p>
+                    <p class="plus__price-val"></p>
+                  </div>
+                  <div class="plus__bottom">
+                    <figure class="plus__img"></figure>
+                    <p class="plus__bonus">бонус</p>
+                    <p class="plus__text">на покупку мебели</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="consultation__slider slider">
+          <div class="slider__inner">
+            <div class="slider__left swiper-container">
+              <div class="slider__wrapper swiper-wrapper">
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-1.jpg" data-srcset="/img/slider-bg-1.jpg 1x, /img/slider-bg-1@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-2.jpg" data-srcset="/img/slider-bg-2.jpg 1x, /img/slider-bg-2@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-3.jpg" data-srcset="/img/slider-bg-3.jpg 1x, /img/slider-bg-3@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-4.jpg" data-srcset="/img/slider-bg-4.jpg 1x, /img/slider-bg-4@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-5.jpg" data-srcset="/img/slider-bg-5.jpg 1x, /img/slider-bg-5@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-6.jpg" data-srcset="/img/slider-bg-6.jpg 1x, /img/slider-bg-6@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-7.jpg" data-srcset="/img/slider-bg-7.jpg 1x, /img/slider-bg-7@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+              </div>
+            </div>
+            <div class="slider__right">
+              <div class="slider__box">
+                <p class="slider__slogan"></p>
+                <div class="slider__control">
+                  <div class="slider__pagination swiper-pagination"></div>
+                  <div class="swiper-button-prev slider__prev"></div>
+                  <div class="swiper-button-next slider__next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="consultation__bottom how">
+          <div class="how__inner">
+            <div class="how__box">
+              <h3 class="how__title">Как проходит работа</h3>
+              <ul class="how__list">
+                <li class="how__item"><span class="how__num">01</span>
+                  <p class="how__text">Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи</p>
+                </li>
+                <li class="how__item"><span class="how__num">02</span>
+                  <p class="how__text">Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом</p>
+                </li>
+                <li class="how__item"><span class="how__num">03</span>
+                  <p class="how__text">Подберем несколько вариантов мебели для преображения вашего интерьера</p>
+                </li>
+                <li class="how__item"><span class="how__num">04</span>
+                  <p class="how__text">Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom</p>
+                </li>
+                <li class="how__item"><span class="how__num">05</span>
+                  <p class="how__text">Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
