--- a/_src/index.html
+++ b/_src/index.html
@@ -188,7 +188,7 @@
             <picture>
               <source media="(max-width: 360px)" data-srcset="/img/cons-bg-360.jpg 1x, /img/cons-bg-360@2x.jpg 2x" />
               <source media="(max-width: 412px)" data-srcset="/img/cons-bg-412.jpg 1x, /img/cons-bg-412@2x.jpg 2x" />
-              <source media="(max-width: 768px)" data-srcset="/img/cons-bg-768.jpg 1x, /img/cons-bg-768@2x.jpg 2x" />
+              <source media="(max-width: 1000px)" data-srcset="/img/cons-bg-1000.jpg 1x, /img/cons-bg-1000@2x.jpg 2x" />
               <source media="(max-width: 1200px)" data-srcset="/img/cons-bg-1200.jpg 1x, /img/cons-bg-1200@2x.jpg 2x" />
               <source media="(max-width: 1440px)" data-srcset="/img/cons-bg-1440.jpg 1x, /img/cons-bg-1440@2x.jpg 2x" />
               <img class="lazyload cons-top__img" data-src="/img/cons-bg.jpg" data-srcset="/img/cons-bg.jpg 1x, /img/cons-bg@2x.jpg 2x" alt="" width="1920" height="969" loading="lazy" />
@@ -205,11 +205,11 @@
                 <ul class="cons-top__list">
                   <li class="cons-top__item cons-top-item">
                     <figure class="cons-top-item__img cons-top-item__img--1"></figure>
-                    <p class="cons-top-item__text">2 грамотных планировочных решения с зонированием и расстановкой мебели</p>
+                    <p class="cons-top-item__text">2 грамотных планировочных решения с зонированием и расстановкой мебели</p>
                   </li>
                   <li class="cons-top__item cons-top-item">
                     <figure class="cons-top-item__img cons-top-item__img--2"></figure>
-                    <p class="cons-top-item__text">Стилевой и цветовой коллаж с индивидуальными вариантами решений под ваш запрос</p>
+                    <p class="cons-top-item__text">Стилевой и цветовой коллаж с индивидуальными вариантами решений под ваш запрос</p>
                   </li>
                   <li class="cons-top__item cons-top-item">
                     <figure class="cons-top-item__img cons-top-item__img--3"></figure>
@@ -228,8 +228,9 @@
               <div class="cons-top__right">
                 <div class="cons-top__plus plus">
                   <div class="plus__top">
-                    <p class="plus__price">стоимость консультации</p>
-                    <p class="plus__price-val"></p>
+                    <p class="plus__price">стоимость
+                      <br>консультации</p>
+                    <p class="plus__price-val">3 000 ₽</p>
                   </div>
                   <div class="plus__bottom">
                     <figure class="plus__img"></figure>
@@ -238,69 +239,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="consultation__slider slider">
-          <div class="slider__inner">
-            <div class="slider__left swiper-container">
-              <div class="slider__wrapper swiper-wrapper">
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-1.jpg" data-srcset="/img/slider-bg-1.jpg 1x, /img/slider-bg-1@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-2.jpg" data-srcset="/img/slider-bg-2.jpg 1x, /img/slider-bg-2@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-3.jpg" data-srcset="/img/slider-bg-3.jpg 1x, /img/slider-bg-3@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-4.jpg" data-srcset="/img/slider-bg-4.jpg 1x, /img/slider-bg-4@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-5.jpg" data-srcset="/img/slider-bg-5.jpg 1x, /img/slider-bg-5@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-6.jpg" data-srcset="/img/slider-bg-6.jpg 1x, /img/slider-bg-6@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-                <div class="slider__item swiper-slide">
-                  <img class="lazyload slider__img" data-src="/img/slider-bg-7.jpg" data-srcset="/img/slider-bg-7.jpg 1x, /img/slider-bg-7@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
-                </div>
-              </div>
-            </div>
-            <div class="slider__right">
-              <div class="slider__box">
-                <p class="slider__slogan"></p>
-                <div class="slider__control">
-                  <div class="slider__pagination swiper-pagination"></div>
-                  <div class="swiper-button-prev slider__prev"></div>
-                  <div class="swiper-button-next slider__next"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="consultation__bottom how">
-          <div class="how__inner">
-            <div class="how__box">
-              <h3 class="how__title">Как проходит работа</h3>
-              <ul class="how__list">
-                <li class="how__item"><span class="how__num">01</span>
-                  <p class="how__text">Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи</p>
-                </li>
-                <li class="how__item"><span class="how__num">02</span>
-                  <p class="how__text">Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом</p>
-                </li>
-                <li class="how__item"><span class="how__num">03</span>
-                  <p class="how__text">Подберем несколько вариантов мебели для преображения вашего интерьера</p>
-                </li>
-                <li class="how__item"><span class="how__num">04</span>
-                  <p class="how__text">Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom</p>
-                </li>
-                <li class="how__item"><span class="how__num">05</span>
-                  <p class="how__text">Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн</p>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
