--- a/_src/index.html
+++ b/_src/index.html
@@ -242,6 +242,65 @@
             </div>
           </div>
         </div>
+        <div class="consultation__slider slider">
+          <div class="slider__inner">
+            <div class="slider__left swiper-container">
+              <div class="slider__wrapper swiper-wrapper">
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-1.jpg" data-srcset="/img/slider-bg-1.jpg 1x, /img/slider-bg-1@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-2.jpg" data-srcset="/img/slider-bg-2.jpg 1x, /img/slider-bg-2@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-3.jpg" data-srcset="/img/slider-bg-3.jpg 1x, /img/slider-bg-3@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-4.jpg" data-srcset="/img/slider-bg-4.jpg 1x, /img/slider-bg-4@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+                <div class="slider__item swiper-slide">
+                  <img class="lazyload slider__img" data-src="/img/slider-bg-5.jpg" data-srcset="/img/slider-bg-5.jpg 1x, /img/slider-bg-5@2x.jpg 2x" alt="" width="961" height="641" loading="lazy" />
+                </div>
+              </div>
+            </div>
+            <div class="slider__right">
+              <div class="slider__box">
+                <p class="slider__slogan">Мы поможем создать
+                  <br>интерьер, в котором
+                  <br>вам захочется жить.</p>
+                <div class="slider__control">
+                  <div class="slider__pagination swiper-pagination"></div>
+                  <div class="swiper-button-prev slider__prev"></div>
+                  <div class="swiper-button-next slider__next"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="consultation__bottom how">
+          <div class="how__inner container">
+            <div class="how__box">
+              <h3 class="how__title title title--all">Как проходит работа</h3>
+              <ul class="how__list">
+                <li class="how__item"><span class="how__num">01</span>
+                  <p class="how__text">Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи</p>
+                </li>
+                <li class="how__item"><span class="how__num">02</span>
+                  <p class="how__text">Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом</p>
+                </li>
+                <li class="how__item"><span class="how__num">03</span>
+                  <p class="how__text">Подберем несколько вариантов мебели для преображения вашего интерьера</p>
+                </li>
+                <li class="how__item"><span class="how__num">04</span>
+                  <p class="how__text">Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom</p>
+                </li>
+                <li class="how__item"><span class="how__num">05</span>
+                  <p class="how__text">Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
