--- a/_src/index.html
+++ b/_src/index.html
@@ -286,13 +286,13 @@
                   <p class="how__text">Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи</p>
                 </li>
                 <li class="how__item"><span class="how__num">02</span>
-                  <p class="how__text">Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом</p>
+                  <p class="how__text">Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться&ensp;<span class="how__text-ldt-hidden">в ваш</span><span class="how__text-ldt-visual">к вам в</span>&ensp;дом</p>
                 </li>
                 <li class="how__item"><span class="how__num">03</span>
                   <p class="how__text">Подберем несколько вариантов мебели для преображения вашего интерьера</p>
                 </li>
                 <li class="how__item"><span class="how__num">04</span>
-                  <p class="how__text">Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom</p>
+                  <p class="how__text">Презентуем подготовленные предложения и ответим на&nbsp;все ваши вопросы&nbsp;лично в&nbsp;офисе или онлайн в&nbsp;Zoom</p>
                 </li>
                 <li class="how__item"><span class="how__num">05</span>
                   <p class="how__text">Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн</p>
@@ -303,13 +303,147 @@
         </div>
       </div>
     </section>
+    <section class="record">
+      <h2 class="record__title">Записаться на консультацию</h2>
+      <div class="record__inner">
+        <figure class="record__img-wrap">
+          <picture>
+            <source media="(max-width: 360px)" data-srcset="/img/record-bg-360.jpg 1x, /img/record-bg-360@2x.jpg 2x" />
+            <source media="(max-width: 412px)" data-srcset="/img/record-bg-412.jpg 1x, /img/record-bg-412@2x.jpg 2x" />
+            <source media="(max-width: 768px)" data-srcset="/img/record-bg-768.jpg 1x, /img/record-bg-768@2x.jpg 2x" />
+            <source media="(max-width: 1200px)" data-srcset="/img/record-bg-1200.jpg 1x, /img/record-bg-1200@2x.jpg 2x" />
+            <source media="(max-width: 1440px)" data-srcset="/img/record-bg-1440.jpg 1x, /img/record-bg-1440@2x.jpg 2x" />
+            <img class="lazyload record__img" data-src="/img/record-bg.jpg" data-srcset="/img/record-bg.jpg 1x, /img/record-bg@2x.jpg 2x" alt="Записаться на консультацию" width="1920" height="613" loading="lazy" />
+          </picture>
+        </figure>
+        <form class="record__form record-form" action="#" method="post" name="record-form-1">
+          <fieldset class="record-form__field">
+            <legend class="record-form__title title title--all title--white">Записаться на&nbsp;консультацию</legend>
+            <p class="record-form__text">C вами свяжется дизайнер и ответит на все вопросы</p>
+            <div class="record-form__box">
+              <input class="record-form__input record-form__input--tel mask reset" type="text" name="record-form-tel-1" placeholder="Ваш телефон" required id="record-form-tel-1">
+              <label class="record-form__label" for="record-form-tel-1"></label>
+              <button class="record-form__btn" type="submit">Заказать звонок</button>
+            </div>
+            <div class="record-form__box personal-box">
+              <input class="personal-box__input" type="checkbox" checked name="record-form-personal-1" id="record-form-personal-1">
+              <label class="personal-box__label" for="record-form-personal-1">Отправляя данные, вы соглашаетесь с&nbsp;Политикой конфиденциальности</label>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+    <section class="projects line-block">
+      <div class="projects__inner container container--border">
+        <h2 class="projects__title title title--all title--dark">Выполненные<br>проекты</h2>
+        <div class="projects__slider projects-slider swiper-container">
+          <div class="projects-slider__wrapper swiper-wrapper">
+            <div class="projects-slider__item swiper-slide">
+              <ul class="projects-slider__left projects-info">
+                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                </li>
+              </ul>
+              <div class="projects-slider__right">
+                <figure class="projects-slider__img-wrap">
+                  <picture>
+                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
+                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </picture>
+                </figure>
+              </div>
+            </div>
+            <div class="projects-slider__item swiper-slide">
+              <ul class="projects-slider__left projects-info">
+                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                </li>
+              </ul>
+              <div class="projects-slider__right">
+                <figure class="projects-slider__img-wrap">
+                  <picture>
+                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
+                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </picture>
+                </figure>
+              </div>
+            </div>
+            <div class="projects-slider__item swiper-slide">
+              <ul class="projects-slider__left projects-info">
+                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                </li>
+              </ul>
+              <div class="projects-slider__right">
+                <figure class="projects-slider__img-wrap">
+                  <picture>
+                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
+                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </picture>
+                </figure>
+              </div>
+            </div>
+            <div class="projects-slider__item swiper-slide">
+              <ul class="projects-slider__left projects-info">
+                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                </li>
+              </ul>
+              <div class="projects-slider__right">
+                <figure class="projects-slider__img-wrap">
+                  <picture>
+                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
+                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </picture>
+                </figure>
+              </div>
+            </div>
+            <div class="projects-slider__item swiper-slide">
+              <ul class="projects-slider__left projects-info">
+                <li class="projects-info__item"><span class="projects-info__term">Объект</span><span class="projects-info__desc">Квартира, кухня-гостиная 25 м2</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Задача</span><span class="projects-info__desc">Организация кухни-гостиной для&nbsp;молодой девушки</span>
+                </li>
+                <li class="projects-info__item"><span class="projects-info__term">Решение</span><span class="projects-info__desc">Перепланировка квартиры с учетом присоединения зоны кухни к гостиной. Предложено стилевое и цветовое решение. Осуществлен подбор материалов, даны рекомендации по&nbsp;освещению.</span>
+                </li>
+              </ul>
+              <div class="projects-slider__right">
+                <figure class="projects-slider__img-wrap">
+                  <picture>
+                    <source media="(max-width: 1200px)" data-srcset="/img/projects-slider-1200.jpg 1x, /img/projects-slider-1200@2x.jpg 2x" />
+                    <img class="lazyload projects-slider__img" data-src="/img/projects-slider.jpg" data-srcset="/img/projects-slider.jpg 1x, /img/projects-slider@2x.jpg 2x" alt="" width="914" height="647" loading="lazy" />
+                  </picture>
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="projects__control">
+            <div class="projects__pagination"></div>
+            <div class="projects__prev"></div>
+            <div class="projects__next"></div>
+          </div>
+        </div><a class="projects__link open-modal-consultation" href="#">Мне нужна консультация</a>
+      </div>
+    </section>
     <section class="modal modal--consultation modal-consultation" id="modal-consultation">
       <div class="modal__inner">
         <h2 class="modal__title modal__title--consultation">Записаться на&nbsp;консультацию</h2>
         <p class="modal__text modal__text--consultation">C вами свяжется дизайнер и&nbsp;ответит на&nbsp;все&nbsp; вопросы</p>
         <form class="modal__form form-consultation">
           <div class="form-consultation__block" action="" method="post">
-            <input class="form-consultation__input form-consultation__input-tel mask" id="form-consultation-tel" type="text" name="form-consultation-tel" placeholder="Ваш телефон" required>
+            <input class="form-consultation__input form-consultation__input-tel mask reset" id="form-consultation-tel" type="text" name="form-consultation-tel" placeholder="Ваш телефон" required>
             <label class="form-consultation__label form-consultation__label-tel" for="form-consultation-tel"></label>
           </div>
           <button class="form-consultation__btn" type="submit">ОТПРАВИТЬ</button>
